<resources>
    <string name="app_name">Avaliacao Limpeza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cadastro_pesquisa">Cadastro Pesquisas</string>
    <string name="menu_cadastro_estabelecimento">Cadastro Estabelecimentos</string>
    <string name="menu_estatistica">Estatistica</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cadastro_pergunta">Cadastro Perguntas</string>
    <string name="fab_content_description">Sair do app</string>
</resources>