<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cadastro_pesquisa">

    <fragment
        android:id="@+id/nav_cadastro_pesquisa"
        android:name="com.infnet.juarez.avaliacaolimpeza.ui.cadastra_pesquisa.CadastraPesquisaFragment"
        android:label="@string/menu_cadastro_pesquisa"
        tools:layout="@layout/fragment_cadastra_pesquisa" />

    <fragment
        android:id="@+id/nav_cadastro_estabelecimento"
        android:name="com.infnet.juarez.avaliacaolimpeza.ui.estabelecimento.EstabelecimentoFragment"
        android:label="@string/menu_cadastro_estabelecimento"
        tools:layout="@layout/fragment_estabelecimento" />

    <fragment
        android:id="@+id/nav_cadastro_pergunta"
        android:name="com.infnet.juarez.avaliacaolimpeza.ui.pergunta.PerguntaFragment"
        android:label="@string/menu_cadastro_pergunta"
        tools:layout="@layout/fragment_pergunta" />

    <fragment
        android:id="@+id/nav_estatistica"
        android:name="com.infnet.juarez.avaliacaolimpeza.ui.estatistica.EstatisticaFragment"
        android:label="@string/menu_estatistica"
        tools:layout="@layout/fragment_estatistica" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.infnet.juarez.avaliacaolimpeza.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.infnet.juarez.avaliacaolimpeza.LoginFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_login" />

</navigation>